<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.wang.mykitchenapp.activity.RegisterActivity">

    <!-- Login progress -->
    <ProgressBar
        android:id="@+id/login_progress"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="200dp"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/regist_form"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:id="@+id/account_register_form"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <com.github.siyamed.shapeimageview.CircularImageView
                android:layout_width="100dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_gravity="center_horizontal"
                android:src="@drawable/logo"
                app:siBorderWidth="6dp"
                app:siBorderColor="@color/darkgray"/>

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/register_text_view_width"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/margin_top"
                android:layout_gravity="center_vertical|center_horizontal">

                <AutoCompleteTextView
                    android:id="@+id/account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_account"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"

                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/register_text_view_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal">

                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_password"
                    android:imeActionId="@+id/login"
                    android:imeActionLabel="@string/action_sign_in_short"
                    android:imeOptions="actionUnspecified"
                    android:inputType="textPassword"
                    android:maxLines="1"
                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/register_text_view_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal">

                <AutoCompleteTextView
                    android:id="@+id/nick_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="昵称"
                    android:maxLines="1"

                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/register_text_view_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal">

                <AutoCompleteTextView
                    android:id="@+id/email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="邮箱"
                    android:inputType="textEmailAddress"
                    android:maxLines="1"

                    android:singleLine="true" />

            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:layout_width="@dimen/register_text_view_width"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_marginTop="16dp">

                <RadioGroup
                    android:id="@+id/gender"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <RadioButton
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="男"></RadioButton>

                    <RadioButton
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="40dp"
                        android:text="女"></RadioButton>
                </RadioGroup>

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/account_sign_up_button"
                style="?android:textAppearanceSmall"
                android:layout_gravity="center_vertical|center_horizontal"
                android:layout_width="@dimen/register_text_view_width"
                android:layout_height="wrap_content"
                android:background="@drawable/shape"
                android:layout_marginTop="16dp"
                android:text="@string/action_sign_on"
                android:textStyle="bold"
                android:textColor="#FB9100"/>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
